# m4b-converter

./: .bumpver.toml  .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: index.md
docs/api/: enums.md  managers.md  schemas.md  services.md  settings.md
docs/guide/: commands.md  examples.md  installation.md  usage.md
m4b_converter/: __init__.py
m4b_converter/cli/: __init__.py  main.py  parser.py
m4b_converter/cli/commands/: __init__.py  analyze.py  batch.py  clean.py  convert.py  cover.py  version.py
m4b_converter/cli/utils/: __init__.py  bytes_to_mb.py  count_files.py  remove_files.py  seconds_parser.py
m4b_converter/core/: m4b.py  mp3_merger.py
m4b_converter/enums/: __init__.py  audio_channels_enum.py  audio_profiles_enum.py  bitrates_enum.py  formats_enum.py  sample_rates_enum.py
m4b_converter/managers/: __init__.py  workflow_manager.py
m4b_converter/schemas/: __init__.py  audio_file_schema.py  audio_metadata_schema.py  conversion_result_model.py  conversion_result_schema.py  conversion_task_schema.py
m4b_converter/services/: __init__.py  audio_analyzer_service.py  extract_cover_service.py  m4b_converter_service.py
m4b_converter/settings/: __init__.py  app_settings.py  log_settings.py
src/cli/: main.py  utils.py
src/m4b_converter/: __init__.py  __main__.py  m4b.py
src/m4b_converter/cli/: cli_config.py  main.py  parser.py  version.py
src/m4b_converter/core/: __init__.py  mp3_merger.py
tests/: audio_analyzer_test.py  extract_cover_test.py
