[project]
name = "m4b-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "gabrielbaute",email = "gabrielbaute@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "m4b_converter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
