[tool.poetry]
name = "m4b-converter"
version = "0.1.0"
description = "Herramienta para convertir audios a M4B con metadatos y capítulos"
authors = ["Gabriel Baute <gabrielbaute@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"  # Si quieres solo Python 3.12+
rich = "^13.0.0"
typer = { version = "^0.9.0", optional = true }  # Opcional para CLI

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"

[tool.poetry.scripts]
m4b-converter = "m4b_converter.cli.main:main"

[tool.poetry.group.dev.dependencies]
bumpver = "^2024.1130"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"